package entities;

public interface Machinery {
}
